# WiVRn

./: AndroidManifest.xml  CMakeLists.txt  build.gradle
.github/workflows/: Build.yml  Format.yml
client/: application.cpp  application.h
client/scenes/: stream.cpp  stream_tracking.cpp
common/: wivrn_config.h.in  wivrn_packets.h  wivrn_sockets.cpp  wivrn_sockets.h
dbus/: io.github.wivrn.Server.xml
flatpak/: io.github.wivrn.wivrn.yml
server/: CMakeLists.txt  main.cpp
server-gui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.ui  rectangle_partitionner.cpp  rectangle_partitionner.h  settings.cpp  settings.h  settings.ui  wivrn_en.ts  wivrn_fr.ts
server/driver/: configuration.cpp  wivrn_comp_target.cpp  wivrn_controller.cpp  wivrn_controller.h  wivrn_session.cpp
server/encoder/: video_encoder.cpp  video_encoder.h  video_encoder_vulkan.cpp  video_encoder_vulkan.h  video_encoder_vulkan_h264.cpp
tools/: update_messages.sh
